--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab+Highlight:wght@700&display=swap');
+
+
+
+
+
 
 body {
   display: flex;
@@ -46,11 +55,15 @@ h2 {
   color: red;
   margin: 5px;
   font-size: 20px;
+  font-family: 'Zilla Slab Highlight', serif;
 }
 
 li {
   text-align: left;
   margin-left: 2em;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-size: 13px;
+ 
 }
 
 .Name {
@@ -60,6 +73,7 @@ li {
   border-radius: 35px;
   background-color: hsl(244, 46%, 75%);
   box-shadow: 2px 2px rgb(109, 109, 175);
+  font-family: 'Lemon', serif;
 }
 
 #altCard {
@@ -71,6 +85,7 @@ li {
   background-color: hsl(115, 49%, 58%);
   padding: 0.3em;
   box-shadow: 2px 2px green;
+  
 }
 
 #hobbies {
@@ -110,6 +125,7 @@ li {
   width: 15em;
   border-radius: 35px;
   background-color: rgb(244, 240, 240);
+  box-shadow: 2px 2px;
 }
 
 .resultDiv p {
@@ -122,6 +138,7 @@ li {
   color: brown;
   font-weight: bolder;
   box-shadow: 1px 1px rgb(109, 109, 175);
+  font-family: 'Lemon', serif;
 }
 
 #choosenOne {
@@ -130,7 +147,8 @@ li {
   margin-top: 1em;
   color: brown;
   font-family: "Rock Salt", cursive;
-  font-weight: bolder;
+  font-weight:1000;
+
 }
 
 #after {
@@ -162,6 +180,7 @@ li {
 
 #congratulation {
   animation: jump 1s infinite;
+  
   /* Kelimenizin diğer stil ayarları (renk, font, vs.) */
 }
 
