--- a/style.css
+++ b/style.css
@@ -14,6 +14,24 @@ body {
   flex-direction: column;
   background-color: azure;
 }
+@media (max-width: 600px) {
+  #dataShownArea {
+    width: 100%; 
+    height: auto; 
+  }
+
+  img {
+    width: 100px;
+    height: 100px;
+  }
+
+  
+}
+
+
+@media (max-width: 768px) {
+  
+}
 
 #dataShownArea {
   margin: auto;
